--- a/product-microservice.properties
+++ b/product-microservice.properties
@@ -2,7 +2,7 @@ spring.jpa.database=default
 spring.sql.init.platform=mysql
 spring.datasource.url=jdbc:mysql://localhost:3306/m_product_db?useUnicode=true&useJDBCCompliantTimezoneShift=true&useLegacyDatetimeCode=false&serverTimezone=UTC&characterEncoding=utf8
 spring.datasource.username=root
-spring.datasource.password=
+spring.datasource.password=mot2P@ss
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
 spring.mvc.throw-exception-if-no-handler-found=true
