--- a/user-microservice.properties
+++ b/user-microservice.properties
@@ -12,3 +12,6 @@ spring.jpa.show-sql=false
 spring.jpa.generate-ddl=true
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQLDialect
+
+spring.application.name=user-microservice
+server.port=5054
