--- a/application.properties
+++ b/application.properties
@@ -1,1 +1,12 @@
 eureka.client.serviceUrl.defaultZone=http://localhost:8761/eureka/
+
+spring.jpa.database=default
+spring.sql.init.platform=mysql
+spring.datasource.username=root
+spring.datasource.password=mot2P@ss
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.mvc.throw-exception-if-no-handler-found=true
+spring.jpa.show-sql=false
+spring.jpa.generate-ddl=true
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQLDialect
