--- a/auth-server.properties
+++ b/auth-server.properties
@@ -1,1 +1,12 @@
 spring.datasource.url=jdbc:mysql://localhost:3306/m_auth_db?useUnicode=true&useJDBCCompliantTimezoneShift=true&useLegacyDatetimeCode=false&serverTimezone=UTC&characterEncoding=utf8
+spring.jpa.database=default
+spring.sql.init.platform=mysql
+spring.datasource.username=root
+spring.datasource.password=mot2P@ss
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+
+spring.mvc.throw-exception-if-no-handler-found=true
+spring.jpa.show-sql=false
+spring.jpa.generate-ddl=true
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQLDialect
