--- a/product-microservice.properties
+++ b/product-microservice.properties
@@ -1,8 +1,8 @@
-spring.datasource.url=jdbc:mysql://localhost:3306/m_product_db?useUnicode=true&useJDBCCompliantTimezoneShift=true&useLegacyDatetimeCode=false&serverTimezone=UTC&characterEncoding=utf8
+spring.datasource.url=jdbc:mysql://localhost:8890/ecommerce?useUnicode=true&useJDBCCompliantTimezoneShift=true&useLegacyDatetimeCode=false&serverTimezone=UTC&characterEncoding=utf8
 spring.jpa.database=default
 spring.sql.init.platform=mysql
 spring.datasource.username=root
-spring.datasource.password=mot2P@ss
+spring.datasource.password=root
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
 spring.mvc.throw-exception-if-no-handler-found=true
