--- a/auth-server.properties
+++ b/auth-server.properties
@@ -1,4 +1,4 @@
-spring.datasource.url=jdbc:mysql://localhost:8890/ecommerce?useUnicode=true&useJDBCCompliantTimezoneShift=true&useLegacyDatetimeCode=false&serverTimezone=UTC&characterEncoding=utf8
+spring.datasource.url=jdbc:mysql://localhost:8890/auth?useUnicode=true&useJDBCCompliantTimezoneShift=true&useLegacyDatetimeCode=false&serverTimezone=UTC&characterEncoding=utf8
 spring.jpa.database=default
 spring.sql.init.platform=mysql
 spring.datasource.username=root
