--- a/user-microservice.properties
+++ b/user-microservice.properties
@@ -1,8 +1,8 @@
 spring.jpa.database=default
 spring.sql.init.platform=mysql
-spring.datasource.url=jdbc:mysql://localhost:8890/users?useUnicode=true&useJDBCCompliantTimezoneShift=true&useLegacyDatetimeCode=false&serverTimezone=UTC&characterEncoding=utf8
+spring.datasource.url=jdbc:mysql://localhost:8890/m_user_db?useUnicode=true&useJDBCCompliantTimezoneShift=true&useLegacyDatetimeCode=false&serverTimezone=UTC&characterEncoding=utf8
 spring.datasource.username=root
-spring.datasource.password=root
+spring.datasource.password=mot2P@ss
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
 spring.mvc.throw-exception-if-no-handler-found=true
