--- a/user-microservice.properties
+++ b/user-microservice.properties
@@ -1,9 +1,13 @@
 spring.jpa.database=default
 spring.sql.init.platform=mysql
-spring.datasource.url=jdbc:mysql://localhost:8890/m_user_db?useUnicode=true&useJDBCCompliantTimezoneShift=true&useLegacyDatetimeCode=false&serverTimezone=UTC&characterEncoding=utf8
-spring.datasource.username=root
-spring.datasource.password=mot2P@ss
+#spring.datasource.url=jdbc:mysql://localhost:8890/m_user_db?useUnicode=true&useJDBCCompliantTimezoneShift=true&useLegacyDatetimeCode=false&serverTimezone=UTC&characterEncoding=utf8
+#spring.datasource.username=root
+#spring.datasource.password=mot2P@ss
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+
+spring.r2dbc.url=r2dbc:mysql://localhost:3306/testdb_spring
+spring.r2dbc.username=root
+spring.r2dbc.password=mot2P@ss
 
 spring.mvc.throw-exception-if-no-handler-found=true
 
